[metadata]
name = easykube
description = Simple, asynchronous Python client for Kubernetes.
long_description = file: README.md
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/easykube

[files]
packages =
    easykube

[options.extras_require]
socks = socksio==1.*

[options.package_data]
easykube =
    py.typed
